// Cricchat — PostgreSQL Schema
// Generated for: dbdiagram.io
// Phase 1 — Backend Architecture & Security Protocol
//
// Paste this at: https://dbdiagram.io/d
// Then export as PNG and commit alongside this file.

Table users {
  id          uuid        [pk, default: `gen_random_uuid()`]
  private_number varchar(10) [unique, not null, note: "System-generated 10-digit identifier"]
  login_password_hash varchar(255) [not null, note: "bcrypt hash of login password"]
  delete_password_hash varchar(255) [not null, note: "bcrypt hash of delete-account password"]
  display_name varchar(100) [null]
  profile_picture_key varchar(512) [null, note: "S3 object key — never a public URL"]
  is_active   boolean     [not null, default: true, note: "Soft delete"]
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz [not null, default: `now()`]

  indexes {
    private_number [unique]
  }
}

Table devices {
  id          uuid        [pk, default: `gen_random_uuid()`]
  user_id     uuid        [not null, ref: > users.id]
  device_name varchar(200)[not null, note: "e.g. iPhone 15 Pro, Pixel 8"]
  push_token  varchar(512)[null, note: "APNs (iOS) or FCM (Android) token"]
  platform    device_platform [not null, note: "ios | android"]
  public_key  text        [null, note: "E2EE X25519 public key (Base64)"]
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz [not null, default: `now()`]
}

Enum device_platform {
  ios
  android
}

Table sessions {
  id                  uuid        [pk, default: `gen_random_uuid()`]
  user_id             uuid        [not null, ref: > users.id]
  device_id           uuid        [null, ref: > devices.id]
  refresh_token_hash  varchar(200)[not null, unique, note: "SHA-256 hash — never stored plaintext"]
  expires_at          timestamptz [not null]
  created_at          timestamptz [not null, default: `now()`]
  updated_at          timestamptz [not null, default: `now()`]

  indexes {
    refresh_token_hash [unique]
    (user_id)
  }
}

Table contacts {
  id          uuid        [pk, default: `gen_random_uuid()`]
  owner_id    uuid        [not null, ref: > users.id]
  contact_id  uuid        [not null, ref: > users.id]
  nickname    varchar(100)[null, note: "Local custom name shown to owner"]
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz [not null, default: `now()`]

  indexes {
    (owner_id, contact_id) [unique, name: "uq_contact_pair"]
  }
}

Table conversations {
  id          uuid        [pk, default: `gen_random_uuid()`]
  is_group    boolean     [not null, default: false, note: "false=DM, true=group (future)"]
  name        varchar(200)[null, note: "Group name — null for 1-to-1"]
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz [not null, default: `now()`]
}

Table conversation_participants {
  conversation_id uuid [not null, ref: > conversations.id]
  user_id         uuid [not null, ref: > users.id]

  indexes {
    (conversation_id, user_id) [pk]
  }
}

Table messages_metadata {
  id                uuid          [pk, default: `gen_random_uuid()`]
  conversation_id   uuid          [not null, ref: > conversations.id]
  sender_id         uuid          [not null, ref: > users.id]
  message_type      message_type  [not null, default: "text"]
  encrypted_payload text          [not null, note: "E2EE ciphertext — server cannot read"]
  delivered_at      timestamptz   [null]
  read_at           timestamptz   [null]
  self_destruct     boolean       [not null, default: false, note: "Burn-on-read"]
  created_at        timestamptz   [not null, default: `now()`]
  updated_at        timestamptz   [not null, default: `now()`]

  indexes {
    conversation_id
    sender_id
  }
}

Enum message_type {
  text
  voice
  image
}
